src/test/ui/mir/mir_detects_invalid_ops.stderr
error: this operation will panic at runtime
  --> $DIR/mir_detects_invalid_ops.rs:11:14
   |
LL |     let _z = 1 / y;
   |              ^^^^^ attempt to divide by zero
   |
   = note: `#[deny(unconditional_panic)]` on by default

error: this operation will panic at runtime
  --> $DIR/mir_detects_invalid_ops.rs:16:14
   |
LL |     let _z = 1 % y;
   |              ^^^^^ attempt to calculate the remainder with a divisor of zero

error: aborting due to 2 previous errors

